# mpd-notify-hs

./: README.md  mpd-notify-hs.cabal  mpd-notify.cabal  stack.yaml
app/: Main.hs
src/: Images.hs  Lib.hs  Options.hs  PathHelpers.hs  Utilities.hs
