name:                mpd-notify
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/charlesschimmel/mpd-notify-hs
license:             BSD3
license-file:        LICENSE
author:              Charles Schimelpfennig
maintainer:          charles.schimmel@gmail
copyright:           2017 Charles Schimmelpfennig
category:            App
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , PathHelpers
                     , Options
  build-depends:       base >= 4.7 && < 5
                     , libnotify
                     , libmpd
                     , filepath
                     , process
                     , directory
                     , safe
                     , optparse-applicative
                     , MissingH
                     -- , containers
                     -- , friday
                     -- , friday-devil
                     -- , vector
  default-language:    Haskell2010

executable mpd-notify
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mpd-notify
  default-language:    Haskell2010

test-suite mpd-notify-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mpd-notify
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/charlesschimmel/mpd-notify-hs
